--- a/projects/newFolderFan/frontend/sass/footer.sass
+++ b/projects/newFolderFan/frontend/sass/footer.sass
@@ -2,6 +2,8 @@ footer
   margin-top: 200px
   padding: 16px 24px
   z-index: 3
+  opacity: 0
+  pointer-events: none
   .t-footerWhereCreatedSection
     width: 16px
     height: 16px
