--- a/projects/newFolderFan/frontend/sass/header.sass
+++ b/projects/newFolderFan/frontend/sass/header.sass
@@ -10,6 +10,8 @@ header
   justify-content: space-between
   transition: .4s cubic-bezier(.35,0,.33,1)
   animation: showHeader 2s cubic-bezier(.35,0,.33,1)
+  &.t-blockHidden
+    display: none
   .t-headerNavigationWrapper
     width: 100%
     display: flex
