--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -211,5 +211,5 @@ html(lang="ru-RU")
                             span Следующий шаг
 
         script(src="/js/vendor.min.js")
-        script(src="/js/plugins/jspdf.min.js")
+        script(src="/js/plugins/dragdealer.js")
         script(src="/js/main.min.js")
