--- a/projects/newFolderFan/frontend/templates/index.jade
+++ b/projects/newFolderFan/frontend/templates/index.jade
@@ -30,8 +30,8 @@ block content
                                 a(href='#') Страшные
                             li
                                 a(href='#') Ещё
-                div.t-jumbotronBottomContentSection
-                    div.t-jumbotronBottomCardsWrapper
+                div.t-jumbotronBottomContentSection#t-jumbotronBottomContentSection.dragdealer
+                    div.t-jumbotronBottomCardsWrapper.handle
                         div.t-jumbotronBottomCardsWrapperSectionOne
                             - for(var i = 0; i < 3; i++)
                                 a(href='#').t-goodCard
